<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_blue"
    tools:context=".Login"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/user"/>

        <TextView
            android:id="@+id/logoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enlace_digital"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/light_green"
            android:layout_below="@id/logoImageView"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintStart_toStartOf="@id/logoImageView"
            app:layout_constraintEnd_toEndOf="@id/logoImageView"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:padding="13dp"
            android:background="@drawable/texts_and_spinners"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_options"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="14dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CB000000"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</FrameLayout>
